<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormFragment">

    <EditText
        android:id="@+id/titulo_input"
        android:layout_width="407dp"
        android:layout_height="62dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/titulo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/descricao_input"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/descricao_input"
        android:layout_width="407dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/salvar_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/salvar_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="244dp"
        android:text="@string/salvar"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/excluir_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="244dp"
        android:text="@string/excluir"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/salvar_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>