<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroFragment">


    <EditText
        android:id="@+id/login_input"
        android:layout_width="407dp"
        android:layout_height="62dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/senha_input"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/nome_input"
        android:layout_width="407dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="264dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/senha_input"
        android:layout_width="407dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/salvar_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/salvar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:layout_marginBottom="188dp"
        android:text="@string/salvar"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>